2005-08-12  Christopher Aillon  <caillon@redhat.com>

	* gtk/gtk.defs:
	gtk.accelerator_get_default_mod_mask () returns a
	GtkModifierType, not a guint.

2005-08-12  Christopher Aillon  <caillon@redhat.com>

	* gobject/pygtype.c:
	pyg_flags_get_value () should accept longs as input

2005-08-10  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump
	
=== PyGTK 2.7.3 ===
2005-08-10  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2005-08-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk.override, gtk/gdk.defs: It was discovered by pycairo
	folks that cairo_surface_create_for_pixbuf doesn't work at all.

2005-08-10  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkcontainer.override (_wrap_gtk_container_nb_nonzero): Always
	return 1, so if hbox always returns true.

2005-08-09  Andy Wingo  <wingo@pobox.com>

	* gobject/pygobject.c (pygobject_new_with_interfaces): Use the
	generic setattr protocol instead of getting the module's
	dictionary and using setitem. Fixes bug #312999.

2005-08-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/reversewrapper.py (GObjectReturn.write_conversion): Add
	type checking: raise exception and return NULL if the returned
	PyObject isn't a PyGObject.
	(ReverseWrapper.write_code): Add support for code that raises an
	exception in the failure code path.

2005-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/Makefile.am
	* Makefile.am: Big makefile cleanup. Fix a couple of bugs
	meanwhile, most noticable, always install include *.defs in
	EXTRA_DIST and only install them when their target is built.
	
2005-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.7.2 ===
2005-07-30  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Updated
	
2005-08-02  Mark McLoughlin  <mark@skynet.ie>

	Fixes bug #312337

	* gobject/gobjectmodule.c: (_wrap_pyg_type_register):
	Make the "already registered" warning a deprecation warning