@@ -1,3 +1,8 @@
+2005-08-16  Johan Dahlin  <johan@gnome.org>
+
+	* gtk/gtkcontainer.override: Override gtk.Container.do_forall.
+	* examples/gtk/bin.py: Simple example how it should work.
+
 2005-08-12  Christopher Aillon  <caillon@redhat.com>
 
 	* gtk/gtk.defs:
